maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: method nord overrides nothing
override def nord() {
             ^